<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remoteTabLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="@dimen/config_horiz_margin"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableHeadingRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/playerNameHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/player_name"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/serverIPAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/server_ip_address"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/tableDataRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/remoteNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/guest" />

            <EditText
                android:id="@+id/remoteIPAddrEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/loopback_ip_address" />
        </TableRow>
    </TableLayout>

</LinearLayout>