<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/localTabLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/config_horiz_margin"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/configTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableHeadingRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_row_vert_pad" >

            <TextView
                android:id="@+id/playerNameHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/player_name"
                android:textColor ="#ffffff"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/playerTypeHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/player_type"
                android:textColor ="#ffffff"
                android:textStyle="bold|italic" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/addPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:visibility="invisible" />

</LinearLayout>